# ml-homework

./: .gitignore  ConvolutionalNetworks.ipynb  README.md  pyproject.toml  two_layer_net.ipynb
classifiers/: cnn.py
homework_0_1/: ConvolutionalNetworks.ipynb  two_layer_net.ipynb
homework_0_1/classifiers/: fc_net.py  layers.py
homework_0_1/datasets/: get_datasets.sh
homework_0_1/utils/: image_utils.py
homework_2/: hw2-transformer.ipynb
saved/: best_two_layer_net.npy
