[project]
name = "ml-homework"
version = "0.1.0"
requires-python = ">=3.11"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "imageio>=2.37.3",
    "future>=1.0.0",
    "six>=1.17.0",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.1.0",
]
